container grpc agregado

--- a/tarea1/docker-compose.yml
+++ b/tarea1/docker-compose.yml
@@ -49,6 +49,31 @@ services:
       - ./backend/data.json:/home/node/data.json
     ports:
       - "$BACKEND_PORT:$BACKEND_PORT"
+  grcpsv:
+    depends_on:
+      - caching
+      - database
+    restart: always
+    build:
+      context: ./backend/grpcsv
+      dockerfile: ./Dockerfile
+    env_file:
+      - .env
+    environment:
+      - POSTGRES_USER=$POSTGRES_USER
+      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+      - POSTGRES_DB=$POSTGRES_DB
+      - POSTGRES_HOST=database
+      - PORT=5000
+      - REDIS_HOST=caching
+    volumes:
+      - ./backend/grpcsv/index.js:/home/node/index.js
+      - ./backend/grpcsv/grpc_server.js:/home/node/grpc_server.js
+      - ./backend/grpcsv/example.proto:/home/node/example.proto
+      - ./backend/grpcsv/data.json:/home/node/data.json
+      - ./backend/grpcsv/grpc_client:/home/node/grpc_client
+    ports:
+      - "5000:5000"
   frontend:
     depends_on:
       - database
