fixear coneccion grpc cliente-sv

--- a/tarea1/docker-compose.yml
+++ b/tarea1/docker-compose.yml
@@ -44,8 +44,8 @@ services:
       - REDIS_HOST=caching
     volumes:
       - ./backend/index.js:/home/node/index.js
-      - ./backend/grpc_server.js:/home/node/grpc_server.js
       - ./backend/example.proto:/home/node/example.proto
+      - ./backend/grpc_client.js:/home/node/grpc_client.js
       - ./backend/data.json:/home/node/data.json
     ports:
       - "$BACKEND_PORT:$BACKEND_PORT"
@@ -72,6 +72,7 @@ services:
       - ./backend/grpcsv/data.json:/home/node/data.json
     ports:
       - "5000:5000"
+      - "50051:50051"
   frontend:
     depends_on:
       - database
